force-app/main/default/objects/Sales_Rep_Profile__c/fields/Sales_Title__c.field-meta.xml
<CustomField>
    <fullName>Sales_Title__c</fullName>
    <description>Sales rep&apos;s job title</description>
    <formula>User_Record_Name__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Title</label>
    <type>Text</type>
</CustomField>