force-app/main/default/objects/Sales_Rep_Profile__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <description>Stores the number of months since the user record associated with the sales rep is created</description>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>