force-app/main/default/objects/Sales_Rep_Profile__c/fields/Tenure_in_current_role__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_current_role__c</fullName>
    <description>Finds the months passed since the role was changed</description>
    <formula>IF(NOT(ISBLANK(Role_change_date__c)),
(((YEAR(TODAY()) - YEAR(Role_change_date__c ) - 1) *12) + (12 - MONTH(Role_change_date__c) +1) + MONTH(TODAY())),  Tenure__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure in current role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>