force-app/main/default/objects/Sales_Rep_Profile__c/fields/Time_to_Tenured_Average_Rev__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Tenured_Average_Rev__c</fullName>
    <description>Count of Months from Rep Start Date until the month where the rep’s 12-month rolling Revenue meets or exceeds Average Annual Revenue for All Tenured Reps.</description>
    <label>Time to Tenured Average Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>