force-app/main/default/objects/Sales_Rep_Profile__c/fields/User_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Record_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user for which the sales representative profile is created</description>
    <label>User Record Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Rep_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>