force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Average_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Average_Selling_Price__c</fullName>
    <description>12 month revenue / 12 month opptys won</description>
    <formula>IF(X12_Month_Rolling_Opptys_Won__c &gt; 0, X12_Month_Rolling_Revenue__c / X12_Month_Rolling_Opptys_Won__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Average Selling Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>