force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_funnel_amt__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_funnel_amt__c</fullName>
    <formula>IF(X12_Month_Rolling_Close_Rate__c&gt; 0,X12_Month_Rolling_Revenue__c / X12_Month_Rolling_Close_Rate__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month funnel $ amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>