force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Lead_Conv_for_1_oppty__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Lead_Conv_for_1_oppty__c</fullName>
    <description>12 Month Lead Conv % for 1 qualified oppty</description>
    <formula>IF(X12_Month_Leads_Added__c != 0,
X12_Month_QO_added__c  /X12_Month_Leads_Added__c, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Lead Conv % for 1 oppty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>