force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Leads_Added__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Leads_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of leads added in the past 12 months</description>
    <label>12 Month Leads Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>