force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Opprties_Added_to_the_funnel__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Opprties_Added_to_the_funnel__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of opportunities added to the sales profile for the past 12 months</description>
    <label>12 Month Opprties Added to the funnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>