force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Revenue_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Revenue_Close_Rate__c</fullName>
    <formula>IF(X12_Month_Rolling_Quota__c != 0 ,
 X12_Month_Rolling_Revenue__c/X12_Month_Rolling_Quota__c,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Revenue Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>