force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Rolling_Average_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Average_Sales_Cycle__c</fullName>
    <defaultValue>0</defaultValue>
    <description># of days between becoming an opp and close/won for the past 12 months</description>
    <label>12 Month Rolling Average Sales Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>