force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Rolling_Average_Win_Size_perc__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Average_Win_Size_perc__c</fullName>
    <formula>IF(Goal_12m_Avg_Selling_Price__c &gt; 0, X12_Month_Average_Selling_Price__c / Goal_12m_Avg_Selling_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Rolling Average $ Win Size perc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>