force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Rolling_Lead_Added_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Lead_Added_Percentage__c</fullName>
    <formula>IF(Goal_12_Month_Lead_Added__c &gt; 0, X12_Month_Leads_Added__c / Goal_12_Month_Lead_Added__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Rolling Lead Added Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>