force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Rolling_Opptys_Won_percentage__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Opptys_Won_percentage__c</fullName>
    <formula>IF(Goal_12_Month_Rolling_Opptys_Won__c &gt; 0, X12_Month_Rolling_Opptys_Won__c / Goal_12_Month_Rolling_Opptys_Won__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Rolling Opptys Won percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>