force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Rolling_Quota__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Quota__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the sum of quota for the last 12 months</description>
    <label>12 Month Rolling Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>