force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Rolling_Quota_Performance__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Quota_Performance__c</fullName>
    <formula>IF(X12_Month_Rolling_Quota__c &gt;0, X12_Month_Rolling_Revenue__c  /  X12_Month_Rolling_Quota__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Rolling Quota Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>