force-app/main/default/objects/Sales_Rep_Profile__c/fields/X12_Month_Rolling_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Win_Percentage__c</fullName>
    <description># of won opps / # of opps for the past 12 months</description>
    <formula>IF(X12_Month_Opprties_Added_to_the_funnel__c != 0,
 X12_Month_Rolling_Opptys_Won__c / 
 X12_Month_Opprties_Added_to_the_funnel__c,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Rolling Win Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>