force-app/main/default/objects/Sales_Rep_Profile__c/fields/X18CharSalesRepID__c.field-meta.xml
<CustomField>
    <fullName>X18CharSalesRepID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18CharSalesRepID</label>
    <type>Text</type>
</CustomField>