force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Average_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_Sales_Cycle__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Average number of days taken to close an opportunity YTD (Configured as fiscal/calendar year during app setup)</description>
    <label>YTD Average Sales Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>