force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Average_win_size__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_win_size__c</fullName>
    <description>YTD Average $ win size is  YTD_Revenue__c /  YTD_Opportunities_won__c</description>
    <formula>IF(YTD_Opportunities_won__c &gt; 0, YTD_Revenue__c /  YTD_Opportunities_won__c , 0)</formula>
    <label>YTD Average $ win size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>