force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Avg_Length_of_Sales_Cycle_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Avg_Length_of_Sales_Cycle_percentage__c</fullName>
    <formula>IF(Goal_12m_length_of_sales_cycle__c &gt; 0, YTD_Average_Sales_Cycle__c/ Goal_12m_length_of_sales_cycle__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Avg Length of Sales Cycle percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>