force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>YTD_Close_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is the division of amount of all the opp added whose close date id less then equal to today by amount of whose colse date is moved to next month</description>
    <label>YTD $ Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>