force-app/main/default/objects/Sales_Rep_Profile__c/fields/Ytd_Funnel_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Ytd_Funnel_Opportunities__c</fullName>
    <description>This field stores the count of qualified opp ytd + the count of the qualified opp moved to next month + the count of the qualified opps that are lost ytd.</description>
    <formula>IF(YTD_Opportunity_Close_Rate__c &gt; 0,YTD_Opportunities_won__c / YTD_Opportunity_Close_Rate__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ytd Funnel Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>