force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Lead_Added_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Lead_Added_Percentage__c</fullName>
    <formula>IF(Goal_of_YTD_leads_to_achieve_quota__c&gt; 0, YTD_Leads_Added__c / Goal_of_YTD_leads_to_achieve_quota__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Lead Added Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>