force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_lead_to_opp_conversion_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_lead_to_opp_conversion_percentage__c</fullName>
    <description>Stores the YTD lead to opp conversion rate achieved in comparison with the goal</description>
    <formula>IF(Goal_12m_Lead_To_Opp_Conv_Rate__c &gt; 0, Lead_to_Opportunity_Conversion_Rate__c / Goal_12m_Lead_To_Opp_Conv_Rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD lead to opp conversion percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>