force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Leads_Added__c.field-meta.xml
<CustomField>
    <fullName>YTD_Leads_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of leads added year to date</description>
    <label>YTD Leads Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>