force-app/main/default/objects/Sales_Rep_Profile__c/fields/Ytd_lost_QO__c.field-meta.xml
<CustomField>
    <fullName>Ytd_lost_QO__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This filed contain the count of the qualified opportunities that are lost in the current Fiscal year.</description>
    <label>Ytd lost QO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>