force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_opp_close_rate_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_opp_close_rate_percentage__c</fullName>
    <description>Stores the YTD opportunity close rate percentage in comparison with the goal</description>
    <formula>IF(Goal_12m_rolling_close_rate__c &gt; 0, YTD_Opportunity_Close_Rate__c / Goal_12m_rolling_close_rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD opp close rate percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>