force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Opportunities_Added_amt__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_Added_amt__c</fullName>
    <description>This field stores the amount of qualified opp ytd + the amount of the qualified opp moved to next month + the amount of the qualified opps that are lost ytd.</description>
    <formula>IF(YTD_Close_Rate__c &gt; 0,YTD_Revenue__c / YTD_Close_Rate__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD funnel $ amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>