force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Opportunities_Added_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_Added_percentage__c</fullName>
    <description>YTD qualified opp added percentage</description>
    <formula>IF(Goal_of_monthly_opptys_added_to_funnel__c &gt; 0 , Ytd_QO_added_Quantitative__c /( Goal_of_monthly_opptys_added_to_funnel__c * Current_Fiscal_Months__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Opportunities Added percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>