force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Opportunities_won__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_won__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of opportunities won by the sales rep in the calendar/fiscal year (configured during the app setup)</description>
    <label>YTD Opportunities Won</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>