force-app/main/default/objects/Sales_Rep_Profile__c/fields/Ytd_QO_added__c.field-meta.xml
<CustomField>
    <fullName>Ytd_QO_added__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is the counter for YTD QO added</description>
    <label>Ytd QO added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>