force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of Revenue from won opportunities YTD (calendar/fiscal year configured during the app setup is considered) for sales rep</description>
    <label>YTD Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>