force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Revenue_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue_Close_Rate__c</fullName>
    <description>Percentage of Revenue closed versus annual quota</description>
    <formula>IF(Annual_Quota_Amount__c &gt; 0, YTD_Revenue__c/Annual_Quota_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Revenue Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>