force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Revenue_Quota_Percent__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue_Quota_Percent__c</fullName>
    <formula>IF(Annual_Quota_Amount__c &gt; 0,
 YTD_Revenue__c / Annual_Quota_Amount__c,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Revenue Quota Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>