force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Win_Percentage__c</fullName>
    <formula>IF(Current_Active_Opportunities__c &gt; 0,
 YTD_Opportunities_won__c / Current_Active_Opportunities__c,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Win Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>