force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTDQP__c.field-meta.xml
<CustomField>
    <fullName>YTDQP__c</fullName>
    <formula>YTD_Quota_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTDQP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>