force-app/main/default/objects/Sales_Rep_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Monthly_QO_added__c</columns>
    <columns>Quarterly_QO_added__c</columns>
    <columns>Ytd_QO_added__c</columns>
    <columns>User_Record_Name__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Role__c</columns>
    <columns>Tenure__c</columns>
    <columns>Average_Deal_Size__c</columns>
    <columns>Current_Pipeline__c</columns>
    <columns>Annual_Quota_Amount__c</columns>
    <columns>Rep_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>